# json-resume

./: .rustfmt.toml  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: audit.yaml  ci.yaml  publish.yaml  reviewdog.yaml  rust-clippy.yml
src/: lib.rs
