[package]
name = "json-resume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_valid = "0.13.0"

[dev-dependencies]
serde_json = "1.0.94"
