[package]
name = "json-resume"
version = "0.2.0"
edition = "2021"
authors = ["Shemnei"]
license = "Unlicense"
keywords = ["cv", "resume", "jsonresume"]
exclude = ["justfile", "sample.resume.json"]
description = "A library to interact with the jsonresume schema"
homepage = "https://github.com/Shemnei/json-resume"

[features]
default = ["validate", "side-projects"]
validate = ["serde_valid"]
side-projects = []

[dependencies]
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_valid = { version = "0.18.0", optional = true }

[dev-dependencies]
serde_json = "1.0.94"
